test mis en place et ok . tester avec docker run -it --rm tournoi npm test

--- a/03_match/Dockerfile
+++ b/03_match/Dockerfile
@@ -3,10 +3,12 @@ FROM node:24
 RUN mkdir -p /usr/src/app/
 WORKDIR /usr/src/app
 
-COPY . .
+COPY package*.json ./
 
 RUN npm install
 RUN npm install --save-dev jest
+
+COPY . .
 
 EXPOSE 3002
 
