--- a/03_match/package.json
+++ b/03_match/package.json
@@ -9,7 +9,9 @@
 	},
 	"dependencies": {
 		"fastify": "^5.4.0",
-		"fastify-plugin": "^5.0.1"
+		"fastify-plugin": "^5.0.1",
+		"sqlite3": "^5.1.6",
+		"sqlite": "^4.0.23"
 	},
 	"devDependencies": {
 		"jest": "^29.0.0"
