02 et 03 ok. a tester . requette get ne fonctionne pas pour newmatch et idem pour post

--- a/02_tournaments/Dockerfile
+++ b/02_tournaments/Dockerfile
@@ -5,12 +5,10 @@ EXPOSE 3001
 RUN mkdir -p /usr/src/app/
 WORKDIR /usr/src/app
 
-COPY ./. .
-COPY ./* .
+COPY package*.json ./
 
 RUN npm install
-RUN npm i fastify
-#RUN npm install --save-dev jest
 
-CMD [ "node", "index.js" ]
+COPY . .
 
+CMD ["node", "index.js"]
