--- a/02_tournaments/package.json
+++ b/02_tournaments/package.json
@@ -1,10 +1,12 @@
 {
-	"type": "module",
-	"dependencies": {
-		"fastify": "^5.4.0",
-		"fastify-plugin": "^5.0.1"
-	},
-	"scripts": {
-  		"test": "jest"
-	}
+  "type": "module",
+  "dependencies": {
+    "fastify": "^5.4.0",
+    "fastify-plugin": "^5.0.1",
+    "node-fetch": "^3.3.2"
+  },
+  "scripts": {
+    "start": "node index.js",
+    "test": "jest"
+  }
 }
