nouvelle organisation et serice user ajoute

--- a/01_user/package.json
+++ b/01_user/package.json
@@ -1,7 +1,19 @@
 {
-	"type": "module",
-	"dependencies": {
-		"fastify": "^5.4.0",
-		"fastify-plugin": "^5.0.1"
-	}
+  "name": "01_user_service",
+  "version": "1.0.0",
+  "description": "Fastify user service example",
+  "type": "module",
+  "main": "index.js",
+  "author": "TRIJAUD Nathan",
+  "dependencies": {
+	"fastify": "^5.4.0",
+	"fastify-plugin": "^5.0.1",
+	"sqlite3": "^5.1.6",
+	"sqlite": "^4.2.1",
+	"node-fetch": "^3.3.2"
+  },
+  "scripts": {
+    "start": "node index.js",
+    "test": "jest"
+  }
 }
