--- a/01_user/Dockerfile
+++ b/01_user/Dockerfile
@@ -1,15 +1,12 @@
 FROM node:24
 
-EXPOSE 3001
-
-RUN mkdir -p /usr/src/app/
 WORKDIR /usr/src/app
 
-COPY ./*.js ./
-COPY ./common_tools/*.js ./
-COPY ./package.json ./package.json
+COPY package*.json ./
 
 RUN npm install
-RUN npm i fastify
 
-CMD [ "node", "user.js" ]
+COPY . .
+
+EXPOSE 3000
+CMD ["node", "index.js"]
