--- a/01_user/Dockerfile
+++ b/01_user/Dockerfile
@@ -9,4 +9,5 @@ RUN npm install && npm install -g nodemon
 COPY . .
 
 EXPOSE 3000
-CMD ["node", "index.js"]
+#CMD ["node", "index.js"]
+CMD ["nodemon", "index.js"]
