--- a/03_match/Dockerfile
+++ b/03_match/Dockerfile
@@ -9,4 +9,5 @@ RUN npm install && npm install -g nodemon
 COPY . .
 
 EXPOSE 3002
-CMD ["node", "index.js"]
+#CMD ["node", "index.js"]
+CMD ["nodemon", "index.js"]
