--- a/02_user/package.json
+++ b/02_user/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "Fastify user service example",
   "type": "module",
-  "main": "index.js",
+  "main": "app.js",
   "author": "TRIJAUD Nathan",
   "dependencies": {
 	"fastify": "^4.25.1",
@@ -12,8 +12,8 @@
 	"node-fetch": "^3.3.2"
   },
   "scripts": {
-    "start": "node index.js",
-	"dev": "nodemon index.js",
+    "start": "node app.js",
+	"dev": "nodemon app.js",
     "test": "jest"
   }
 }
