commit before 31 jiullet

--- a/02_user/Dockerfile
+++ b/02_user/Dockerfile
@@ -1,4 +1,4 @@
-FROM node:24
+FROM louischarvet/ft_transcendence_backend_base:1.0
 
 WORKDIR /usr/src/app
 
@@ -7,12 +7,14 @@ COPY ./package.json ./package-lock.json* ./
 RUN npm install && npm install -g nodemon
 RUN apt-get update && apt-get upgrade -y
 RUN apt-get install sqlite3 -y
-RUN npm install sqlite3
-RUN npm install sqlite
+# RUN npm install sqlite3
+# RUN npm install sqlite
+
+RUN npm install @fastify/jwt
 
 COPY . .
 
-RUN cat ./database/initDatabase.sqlite | sqlite3 users_database
+RUN cat ./database/initDatabase.sqlite | sqlite3 users_db
 
 EXPOSE 3000
 #CMD ["node", "index.js"]
