routes /guest, /login and /signin working i guess

--- a/backend/02_user/Dockerfile
+++ b/backend/02_user/Dockerfile
@@ -10,6 +10,7 @@ RUN apt-get install sqlite3 -y
 # RUN npm install sqlite3
 # RUN npm install sqlite
 RUN npm install @fastify/jwt
+RUN npm install bcrypt
 
 COPY . .
 
