routes for session: /generate /authenticate /revoke. Not connected with other containers for now

--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -56,6 +56,20 @@ services:
       - match-service
     command: npm run dev
 
+  session-service:
+
+    build: ./05_session
+    container_name: session-service
+    expose:
+      - "3005"
+    ports:
+      - "3005:3005"
+    working_dir: /usr/src/app
+    networks:
+      - transcendence-net
+    restart: unless-stopped
+    depends_on:
+      - user-service
 
 networks:
   transcendence-net:
