--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,20 +1,23 @@
 {
-  "name": "frontend",
-  "version": "1.0.0",
+  "name": "package.json",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
-    "serve": "node server.js"
-  },
-  "dependencies": {
-    "express": "^4.18.2"
+    "build": "tsc && vite build",
+    "preview": "vite preview"
   },
   "devDependencies": {
-    "vite": "^4.0.0",
-    "tailwindcss": "^4.1.11",
-    "autoprefixer": "^10.4.0",
-    "typescript": "^5.0.0",
-    "@types/node": "^18.0.0"
-  },
-  "type": "module"
+    "@babylonjs/core": "^8.22.0",
+    "@babylonjs/gui": "^8.22.0",
+    "@babylonjs/loaders": "^8.22.0",
+    "@types/victor": "^1.1.5",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.1",
+    "typescript": "~5.8.3",
+    "victor": "^1.1.0",
+    "vite": "^7.1.0"
+  }
 }
