mailgun works only with signin mail... but the structure is here

--- a/backend/06_2fa/Dockerfile
+++ b/backend/06_2fa/Dockerfile
@@ -5,7 +5,8 @@ WORKDIR /usr/src/app
 RUN npm install
 RUN apt-get update && apt-get upgrade -y
 RUN npm install fastify fastify-plugin \
-	nodemailer speakeasy dotenv
+	nodemailer speakeasy dotenv \
+	mailgun.js form-data
 
 COPY . .
 
