--- a/backend/06_twofa/Dockerfile
+++ b/backend/06_twofa/Dockerfile
@@ -7,6 +7,9 @@ RUN apt-get update && apt-get upgrade -y
 RUN npm install fastify fastify-plugin \
 	nodemailer speakeasy dotenv \
 	mailgun.js form-data
+RUN npm install sqlite sqlite3
+RUN apt-get install sqlite3 -y
+
 
 COPY . .
 
