--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -46,7 +46,8 @@ services:
     working_dir: /app
     depends_on:
       - proxy-service
-
+    stdin_open: true   # permet de garder le conteneur actif
+    tty: true           # garde Vite en mode watch
 networks:
   transcendence-net:
     driver: bridge
