--- a/backend/05_session/package.json
+++ b/backend/05_session/package.json
@@ -6,12 +6,13 @@
   "main": "app.js",
   "author": "TRIJAUD Nathan",
   "dependencies": {
-	"fastify": "^4.23.2",
+	"fastify": "^4.0.0",
+  "@fastify/cookie": "^8.3.0",
 	"sqlite3": "^5.1.6",
 	"sqlite": "^4.2.1",
 	"node-fetch": "^3.3.2",
 	"@fastify/cors": "^8.2.0",
-	"@fastify/jwt": "^7.2.0"
+	"@fastify/jwt": "^6.7.0"
   },
   "scripts": {
     "start": "node app.js",
