--- a/backend/05_session/Dockerfile
+++ b/backend/05_session/Dockerfile
@@ -15,6 +15,7 @@ RUN npm install @fastify/cookie
 RUN npm install @fastify/jwt
 # RUN npm install jsonwebtoken
 RUN npm install fastify-cron
+RUN npm install @fastify/cors
 
 COPY . .
 
