--- a/backend/02_user/package.json
+++ b/backend/02_user/package.json
@@ -11,6 +11,7 @@
     "sqlite": "^4.2.1",
     "node-fetch": "^3.3.2",
     "@fastify/cors": "^8.2.0",
+    "@fastify/cookie": "^8.3.0",
     "@fastify/jwt": "^7.2.0",
     "@fastify/multipart": "^7.0.0",
     "@fastify/helmet": "^11.0.0"
