--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -4,14 +4,13 @@ WORKDIR /app
 
 COPY ./package.json ./package-lock.json* ./
 RUN npm install
+RUN npm install express
 
 COPY . .
 
-# Expose Vite port
-EXPOSE 5173
+# Build frontend
+RUN npm run build
 
-# vider le cach
-RUN rm -rf node_modules/.vite dist
-# CMD en forme exec JSON correcte pour Alpine et Vite
-CMD ["npm", "run", "dev", "--", "--host", "0.0.0.0"]
-# CMD ["npm", "run", "dev", "--", "--host", "0.0.0.0", "--port", "5173"]
+EXPOSE 3000
+
+CMD ["node", "server.js"]
