--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,12 +1,14 @@
 {
-  "name": "my-babylon-app",
+  "name": "frontend-app",
   "private": true,
   "version": "0.0.1",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "preview": "vite preview"
+    "build:ts": "tsc",
+    "build:css": "tailwindcss -i ./src/style.css -o ./dist/style.css --minify",
+    "copy:static": "cp index.html dist/ && cp -r public/* dist/",
+    "build": "npm run build:ts && npm run build:css && npm run copy:static",
+    "start": "npm run build && node server.js"
   },
   "devDependencies": {
     "@babylonjs/core": "^8.22.0",
@@ -17,7 +19,6 @@
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.1",
     "typescript": "~5.8.3",
-    "victor": "^1.1.0",
-    "vite": "^7.1.0"
+    "victor": "^1.1.0"
   }
 }
