--- a/backend/01_reverse_proxy/package.json
+++ b/backend/01_reverse_proxy/package.json
@@ -8,6 +8,7 @@
 	"dependencies": {
 		"fastify": "^4.29.1",
 		"@fastify/http-proxy": "9.0.0",
+    	"@fastify/cookie": "^8.3.0",
 		"@fastify/cors": "^8.2.0"
 	},
 	"scripts": {
