--- a/backend/03_match/package.json
+++ b/backend/03_match/package.json
@@ -6,9 +6,10 @@
   "main": "app.js",
   "author": "TRIJAUD Nathan",
   "dependencies": {
-	"fastify": "^5.4.0",
+	"fastify": "^4.23.2",
 	"sqlite3": "^5.1.6",
 	"sqlite": "^4.2.1",
+    "@fastify/cookie": "^8.3.0",
 	"node-fetch": "^3.3.2"
   },
   "scripts": {
