--- a/backend/04_tournaments/package.json
+++ b/backend/04_tournaments/package.json
@@ -9,6 +9,7 @@
 	"fastify": "^4.25.1",
 	"sqlite3": "^5.1.6",
 	"sqlite": "^4.2.1",
+    "@fastify/cookie": "^8.3.0",
 	"node-fetch": "^3.3.2"
   },
   "scripts": {
