--- a/backend/02_user/Dockerfile
+++ b/backend/02_user/Dockerfile
@@ -1,4 +1,5 @@
-FROM louischarvet/ft_transcendence_backend_base:1.0
+#FROM louischarvet/ft_transcendence_backend_base:1.0
+FROM node:24
 
 WORKDIR /usr/src/app
 
