--- a/backend/06_twofa/Dockerfile
+++ b/backend/06_twofa/Dockerfile
@@ -1,6 +1,9 @@
-FROM louischarvet/ft_transcendence_backend_base:1.0
+#FROM louischarvet/ft_transcendence_backend_base:1.0
+FROM node:24
 
 WORKDIR /usr/src/app
+
+COPY ./package.json ./
 
 RUN npm install
 RUN apt-get update && apt-get upgrade -y
