in session-service: secretKey generated with speakeasy

--- a/backend/02_user/Dockerfile
+++ b/backend/02_user/Dockerfile
@@ -12,14 +12,15 @@ RUN npm install && npm install -g nodemon
 RUN apt-get update && apt-get upgrade -y
 RUN apt-get install sqlite3 -y
 
-RUN npm install @fastify/jwt
 RUN npm install fastify-cron
 RUN npm install @fastify/cookie
 # helmet pour proteger contre attaques XSS
 # RUN npm install @fastify/helmet
 RUN npm install bcrypt
+RUN npm install speakeasy
 
 COPY . .
+RUN mkdir ./data/
 
 EXPOSE 3000
 #CMD ["node", "index.js"]
