--- a/backend/05_session/Dockerfile
+++ b/backend/05_session/Dockerfile
@@ -14,6 +14,7 @@ RUN npm install @fastify/cookie
 RUN npm install @fastify/jwt
 RUN npm install fastify-cron
 RUN npm install @fastify/cors
+RUN npm install speakeasy
 
 COPY . .
 
