match database refacto OK ? not properly tested (must connect with frontend). removed match/test. removed nodemon from user, match and session dockerfiles (node instead). Still some unclear routes in match

--- a/backend/02_user/Dockerfile
+++ b/backend/02_user/Dockerfile
@@ -1,11 +1,9 @@
-#FROM louischarvet/ft_transcendence_backend_base:1.0
 FROM node:24
 
 WORKDIR /usr/src/app
 
 COPY ./package.json ./package-lock.json* ./
 
-# mettre node apres
 RUN npm install && npm install -g nodemon
 
 
@@ -14,7 +12,6 @@ RUN apt-get install sqlite3 -y
 
 RUN npm install fastify-cron
 RUN npm install @fastify/cookie
-# helmet pour proteger contre attaques XSS
 # RUN npm install @fastify/helmet
 RUN npm install bcrypt
 RUN npm install speakeasy
@@ -23,5 +20,5 @@ COPY . .
 RUN mkdir -p ./data/
 
 EXPOSE 3000
-#CMD ["node", "index.js"]
-CMD ["nodemon", "app.js"]
+
+CMD ["node", "app.js"]
