--- a/backend/05_session/Dockerfile
+++ b/backend/05_session/Dockerfile
@@ -1,4 +1,3 @@
-#FROM louischarvet/ft_transcendence_backend_base:1.0
 FROM node:24
 
 WORKDIR /usr/src/app
@@ -7,7 +6,6 @@ RUN mkdir -p /usr/src/app/data/
 
 COPY ./package.json ./package-lock.json* ./
 
-RUN npm install && npm install -g nodemon
 RUN apt-get update && apt-get upgrade -y
 RUN apt-get install sqlite3 -y
 RUN npm install @fastify/cookie
@@ -19,4 +17,4 @@ RUN npm install speakeasy
 COPY . .
 
 EXPOSE 3000
-CMD ["nodemon", "app.js"]
+CMD ["node", "app.js"]
