--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,6 @@
     "tailwindcss": "^3.4.1",
     "typescript": "~5.8.3",
     "victor": "^1.1.0",
-    "vite": "^7.1.0"
+    "vite": "7.1.12"
   }
 }
