server-side pong with websocket and all associate stuff

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,6 +28,10 @@ services:
     extends:
       file: ./backend/docker-compose.yml
       service: twofa-service      
+  pong-service:
+    extends:
+      file: ./backend/docker-compose.yml
+      service: pong-service
       
   # Service du frontend
   frontend:
